Updated installation documentation