@@ -22,7 +22,7 @@ Create the directory ``/usr/lib/jvm`` if it doesn't exist::
 Copy the file to ``/usr/lib/jvm``, make it executable, and run it as root::
 
   chmod +x jdk-6u35-linux-i586.bin  
-  sudo mv jdk-6u35-linux-i586.bin /usr/lib/jvm
+  sudo cp jdk-6u35-linux-i586.bin /usr/lib/jvm
   cd /usr/lib/jvm
   sudo ./jdk-6u35-linux-i586.bin
 
@@ -57,24 +57,348 @@ Should read::
 Tomcat 6
 --------
 
-Download latest tomcat 6 from:
+Tomcat is a web application container. In the context of the NFMS platform it will contain the administrative interface, the dissemination portal and geoserver. In order to install Tomcat, download the latest tomcat 6 version from:
 
   http://tomcat.apache.org/download-60.cgi
 
 Select the core binary distribution. The file will be named, for example, ``apache-tomcat-6.0.35.tar.gz``.
 
-As superuser, move the file to ``/opt/`` and uncompress it. Make a simpler ``tomcat`` link, so updates are easier in the future::
+As superuser, move the file to ``/var/`` and uncompress it. Make a simpler ``tomcat`` link, so updates are easier in the future::
   
-  sudo mv apache-tomcat-6.0.35.tar.gz /opt
-  cd /opt
+  sudo mv apache-tomcat-6.0.35.tar.gz /var
+  cd /var
   sudo tar -xvf apache-tomcat-6.0.35.tar.gz
   sudo ln -s apache-tomcat-6.0.35 tomcat
 
-From this binaries, we will be configuring and running several tomcat instances. This setup is explained in :ref:`unredd-install-tomcat_instances`.
+The directory where tomcat binaries reside is known as ``CATALINA_HOME``. In our case::
+
+  CATALINA_HOME=/var/tomcat
 
 Delete the file ``apache-tomcat-6.0.35.tar.gz``::
 
   sudo rm apache-tomcat-6.0.35.tar.gz
+
+Setting environment variables
+..............................
+
+The different applications that are contained in Tomcat require some custom configuration parameters. In order to do that, the file ``CATALINA_BASE/bin/setenv.sh`` must be edited:
+
+   .. code-block:: sh
+
+     # Java options
+     JAVA_OPTS="-server -Xms1024m -Xmx1024m -XX:MaxPermSize=128m -XX:PermSize=64m -XX:+UseConcMarkSweepGC -XX:NewSize=48m -Dorg.geotools.shapefile.datetime=true -DGEOSERVER_DATA_DIR=/var/geoserver/data -DGEOSERVER_LOG_LOCATION=/var/tomcat/logs/geoserver.log -Duser.timezone=GMT -DMINIFIED_JS=true -DPORTAL_CONFIG_DIR=/var/portal"
+
+.. warning:: The two last parameters (MINIFIED_JS and PORTAL_CONFIG_DIR) are not necessary in the staging area because they are specific for the dissemination portal and the staging does not require it.
+
+Configuring tomcat as a service
+................................
+
+#. Create ``tomcat6`` user::
+
+	$ useradd tomcat6
+	
+#. Make all the server tree structure belong to the ``tomcat6`` user::
+
+	$ sudo chown -R tomcat6:tomcat6 /var/tomcat/
+	
+   .. warning:: It is important to add a slash (/) at the end of ``/var/tomcat/`` because it is a symbolic link and if the slash is not added only the symbolic link gets its owner changed.
+
+#. Create the file ``/etc/init.d/ubuntuTomcatRunner.sh`` with this content:
+
+ .. code-block:: sh
+
+     #!/bin/sh
+     #
+     # /etc/init.d/tomcat6 -- startup script for the Tomcat 6 servlet engine
+     #
+     # Written by Miquel van Smoorenburg <miquels@cistron.nl>.
+     # Modified for Debian GNU/Linux  by Ian Murdock <imurdock@gnu.ai.mit.edu>.
+     # Modified for Tomcat by Stefan Gybas <sgybas@debian.org>.
+     # Modified for Tomcat6 by Thierry Carrez <thierry.carrez@ubuntu.com>.
+     # Additional improvements by Jason Brittain <jason.brittain@mulesoft.com>.
+     # Adapted to run multiple tomcat instances for UN-REDD NFMS platform.
+     
+     set -e
+     
+     DESC="NFMS4REDD Tomcat"
+     CATALINA_BASE=/var/tomcat/
+     PATH=/bin:/usr/bin:/sbin:/usr/sbin
+     DEFAULT=/etc/default/tomcat
+     JVM_TMP=$CATALINA_BASE/temp
+     
+     if [ -r $CATALINA_BASE/bin/setenv.sh ]; then
+             . $CATALINA_BASE/bin/setenv.sh
+     fi
+     
+     if [ `id -u` -ne 0 ]; then
+        echo "You need root privileges to run this script"
+        exit 1
+     fi
+     
+     # Make sure tomcat is started with system locale
+     if [ -r /etc/default/locale ]; then
+        . /etc/default/locale
+        export LANG
+     fi
+     
+     . /lib/lsb/init-functions
+     
+     if [ -r /etc/default/rcS ]; then
+        . /etc/default/rcS
+     fi
+     
+     
+     # The following variables can be overwritten in $DEFAULT
+     
+     # Run Tomcat 6 as this user ID and group ID
+     TOMCAT6_USER=tomcat6
+     TOMCAT6_GROUP=tomcat6
+     
+     # The first existing directory is used for JAVA_HOME (if JAVA_HOME is not
+     # defined in $DEFAULT)
+     JDK_DIRS="/usr/lib/jvm/default-java"
+     
+     # Look for the right JVM to use
+     for jdir in $JDK_DIRS; do
+         if [ -r "$jdir/bin/java" -a -z "${JAVA_HOME}" ]; then
+        JAVA_HOME="$jdir"
+         fi
+     done
+     export JAVA_HOME
+     
+     # Directory where the Tomcat 6 binary distribution resides
+     CATALINA_HOME=/var/tomcat
+     
+     # Use the Java security manager? (yes/no)
+     TOMCAT6_SECURITY=no
+     
+     # Default Java options
+     # Set java.awt.headless=true if JAVA_OPTS is not set so the
+     # Xalan XSL transformer can work without X11 display on JDK 1.4+
+     # It also looks like the default heap size of 64M is not enough for most cases
+     # so the maximum heap size is set to 128M
+     if [ -z "$JAVA_OPTS" ]; then
+        JAVA_OPTS="-Djava.awt.headless=true -Xmx128M"
+     fi
+     
+     # End of variables that can be overwritten in $DEFAULT
+     
+     # overwrite settings from default file
+     #if [ -f "$DEFAULT" ]; then
+     #  . "$DEFAULT"
+     #fi
+     
+     if [ ! -f "$CATALINA_HOME/bin/bootstrap.jar" ]; then
+        log_failure_msg "$SERVICE is not installed"
+        exit 1
+     fi
+     
+     POLICY_CACHE="$CATALINA_BASE/work/catalina.policy"
+     
+     if [ -z "$CATALINA_TMPDIR" ]; then
+        CATALINA_TMPDIR="$JVM_TMP"
+     fi
+     
+     # Set the JSP compiler if set in the tomcat6.default file
+     if [ -n "$JSP_COMPILER" ]; then
+        JAVA_OPTS="$JAVA_OPTS -Dbuild.compiler=\"$JSP_COMPILER\""
+     fi
+     
+     SECURITY="no"
+     if [ "$TOMCAT6_SECURITY" = "yes" ]; then
+        SECURITY="-security"
+     fi
+     
+     # Define other required variables
+     CATALINA_PID="/var/run/$SERVICE.pid"
+     CATALINA_SH="$CATALINA_HOME/bin/catalina.sh"
+     
+     # Look for Java Secure Sockets Extension (JSSE) JARs
+     if [ -z "${JSSE_HOME}" -a -r "${JAVA_HOME}/jre/lib/jsse.jar" ]; then
+         JSSE_HOME="${JAVA_HOME}/jre/"
+     fi
+     
+     catalina_sh() {
+        # Escape any double quotes in the value of JAVA_OPTS
+        JAVA_OPTS="$(echo $JAVA_OPTS | sed 's/\"/\\\"/g')"
+     
+        AUTHBIND_COMMAND=""
+        if [ "$AUTHBIND" = "yes" -a "$1" = "start" ]; then
+           JAVA_OPTS="$JAVA_OPTS -Djava.net.preferIPv4Stack=true"
+           AUTHBIND_COMMAND="/usr/bin/authbind --deep /bin/bash -c "
+        fi
+     
+        # Define the command to run Tomcat's catalina.sh as a daemon
+        # set -a tells sh to export assigned variables to spawned shells.
+        TOMCAT_SH="set -a; JAVA_HOME=\"$JAVA_HOME\"; source \"$DEFAULT\"; \
+           CATALINA_HOME=\"$CATALINA_HOME\"; \
+           CATALINA_BASE=\"$CATALINA_BASE\"; \
+           JAVA_OPTS=\"$JAVA_OPTS\"; \
+           CATALINA_PID=\"$CATALINA_PID\"; \
+           CATALINA_TMPDIR=\"$CATALINA_TMPDIR\"; \
+           LANG=\"$LANG\"; JSSE_HOME=\"$JSSE_HOME\"; \
+           cd \"$CATALINA_BASE\"; \
+           \"$CATALINA_SH\" $@"
+     
+        if [ "$AUTHBIND" = "yes" -a "$1" = "start" ]; then
+           TOMCAT_SH="'$TOMCAT_SH'"
+        fi
+     
+        # Run the catalina.sh script as a daemon
+        set +e
+        touch "$CATALINA_PID" "$CATALINA_BASE"/logs/catalina.out
+        #chown -R $TOMCAT6_USER:$TOMCAT6_USER $CATALINA_BASE
+        chown $TOMCAT6_USER "$CATALINA_PID" "$CATALINA_BASE"/logs/catalina.out
+        start-stop-daemon --start -b -u "$TOMCAT6_USER" -g "$TOMCAT6_GROUP" \
+           -c "$TOMCAT6_USER" -d "$CATALINA_TMPDIR" -p "$CATALINA_PID" \
+           -x /bin/bash -- -c "$AUTHBIND_COMMAND $TOMCAT_SH"
+        status="$?"
+        set +a -e
+        return $status
+     }
+     
+     case "$1" in
+       start)
+        if [ -z "$JAVA_HOME" ]; then
+           log_failure_msg "no JDK found - please set JAVA_HOME"
+           exit 1
+        fi
+     
+        if [ ! -d "$CATALINA_BASE/conf" ]; then
+           log_failure_msg "invalid CATALINA_BASE: $CATALINA_BASE"
+           exit 1
+        fi
+     
+        log_daemon_msg "Starting $DESC" "$SERVICE"
+        if start-stop-daemon --test --start --pidfile "$CATALINA_PID" \
+           --user $TOMCAT6_USER --exec "$JAVA_HOME/bin/java" \
+           >/dev/null; then
+     
+           # Regenerate POLICY_CACHE file
+     #     umask 022
+     #     echo "// AUTO-GENERATED FILE from /etc/tomcat6/policy.d/" \
+     #        > "$POLICY_CACHE"
+     #     echo ""  >> "$POLICY_CACHE"
+     #     cat $CATALINA_BASE/conf/policy.d/*.policy \
+     #        >> "$POLICY_CACHE"
+     
+           # Remove / recreate JVM_TMP directory
+           rm -rf "$JVM_TMP"
+           mkdir -p "$JVM_TMP" || {
+              log_failure_msg "could not create JVM temporary directory"
+              exit 1
+           }
+           chown $TOMCAT6_USER "$JVM_TMP"
+     
+           catalina_sh start $SECURITY
+           sleep 5
+              if start-stop-daemon --test --start --pidfile "$CATALINA_PID" --user $TOMCAT6_USER --exec "$JAVA_HOME/bin/java" \
+              >/dev/null; then
+              echo $?
+              if [ -f "$CATALINA_PID" ]; then
+                 rm -f "$CATALINA_PID"
+              fi
+              log_end_msg 1
+           else
+              log_end_msg 0
+           fi
+        else
+                log_progress_msg "(already running)"
+           log_end_msg 0
+        fi
+        ;;
+       stop)
+        log_daemon_msg "Stopping $DESC" "$SERVICE"
+     
+        set +e
+        if [ -f "$CATALINA_PID" ]; then
+           start-stop-daemon --stop --pidfile "$CATALINA_PID" \
+              --user "$TOMCAT6_USER" \
+              --retry=TERM/20/KILL/5 >/dev/null
+           if [ $? -eq 1 ]; then
+              log_progress_msg "$SERVICE is not running but pid file exists, cleaning up"
+           elif [ $? -eq 3 ]; then
+              PID="`cat $CATALINA_PID`"
+              log_failure_msg "Failed to stop $SERVICE (pid $PID)"
+              exit 1
+           fi
+           rm -f "$CATALINA_PID"
+           rm -rf "$JVM_TMP"
+        else
+           log_progress_msg "(not running)"
+        fi
+        log_end_msg 0
+        set -e
+        ;;
+        status)
+        set +e
+        start-stop-daemon --test --start --pidfile "$CATALINA_PID" \
+           --user "$TOMCAT6_USER" \
+           >/dev/null 2>&1
+        if [ "$?" = "0" ]; then
+     
+           if [ -f "$CATALINA_PID" ]; then
+               log_success_msg "$SERVICE is not running, but pid file exists."
+              exit 1
+           else
+               log_success_msg "$SERVICE is not running."
+              exit 3
+           fi
+        else
+           log_success_msg "$SERVICE is running with pid `cat $CATALINA_PID`"
+        fi
+        set -e
+             ;;
+       restart|force-reload)
+        if [ -f "$CATALINA_PID" ]; then
+           $0 stop
+           sleep 1
+        fi
+        $0 start
+        ;;
+       try-restart)
+             if start-stop-daemon --test --start --pidfile "$CATALINA_PID" \
+           --user $TOMCAT6_USER --exec "$JAVA_HOME/bin/java" \
+           >/dev/null; then
+           $0 start
+        fi
+             ;;
+       *)
+        log_success_msg "Usage: $0 {start|stop|restart|try-restart|force-reload|status}"
+        exit 1
+        ;;
+     esac
+     
+     exit 0
+
+
+#. Create the file ``/etc/init.d/tomcat6``. It will contain the INIT block, the service name, and a description. The file contents would be:
+
+     .. code-block:: sh
+
+      #!/bin/sh
+      ### BEGIN INIT INFO
+      # Provides:          tomcat6
+      # Required-Start:    $local_fs $remote_fs $network
+      # Required-Stop:     $local_fs $remote_fs $network
+      # Should-Start:      $named
+      # Should-Stop:       $named
+      # Default-Start:     2 3 4 5
+      # Default-Stop:      0 1 6
+      # Description:       Start Tomcat6.
+      ### END INIT INFO
+
+      . /etc/init.d/ubuntuTomcatRunner.sh
+
+#. Make the file created in ``/etc/init.d/`` executable::
+
+      chmod +x ubuntuTomcatRunner.sh tomcat6
+
+#. Launch tomcat::
+
+	service tomcat6 start
+	
+#. Check tomcat is up visiting ``http://localhost:8080/`` with a web browser.
 
 Apache 2
 --------
@@ -151,27 +475,7 @@ PostGIS
 In Ubuntu, use the package manager to install PostgreSQL 9.1 and other prerequisites needed for PostGIS building::
 
   sudo apt-get install build-essential postgresql-9.1 postgresql-server-dev-9.1 libxml2-dev libgeos-dev proj
-
-But, *don't use apt-get to install PostGIS*, as it will install 2.0 version, and we want to stick to the earlier 1.5 branch. We will build PostGIS from sources.
-
-Download the latest PostGIS 1.5 stable source code from:
-
-  http://postgis.refractions.net/download/
-
-Then, uncompress, build and install::
-
-  tar xfvz postgis-1.5.5.tar.gz
-  cd postgis-1.5.5
-  ./configure
-  make
-  sudo make install
-  cd doc/
-  sudo make comments-install
-  cd ../loader/
-  make shp2pgsql
-  sudo make install
-  sudo ln /usr/lib/postgresql/9.1/bin/shp2pgsql /usr/bin/shp2pgsql
-
+  
 Finally, create a postgis template, useful to create spatially enabled databases from it::
 
   sudo -u postgres createdb template_postgis
@@ -188,64 +492,46 @@ Finally, create a postgis template, useful to create spatially enabled databases
 
 You will need these PostGIS databases:
 
-stg_geostore
-   DB for GeoStore webapp on the staging area.
-stg_geoserver 
-   DB for GeoServer vector layers on the staging area.
-diss_geostore 
-   DB for GeoStore webapp on the dissemination system.
-diss_geoserver
-   DB for GeoServer vector layers on the dissemination system.
+geoserver 
+   DB for GeoServer vector layers.
+app 
+   DB for storing portal application data, such as feedback reports, on the dissemination system.
+
+.. warning:: The set of databases that are necessary on the system depends on the concrete subsystem that is being installed. In concrete, the staging subsystem does not require the app database since it does not contain the portal.
 
 
 Create users
 ............
 
-Different users will be used for the various databases. Use the following instructions in psql console, setting the passwords as needed.
+Different users will be used for the various databases. Use the following instructions in psql console, setting the passwords as needed. Again, the *app* user is only necessary in dissemination.
 
 To enter the psql console, run::
 
   sudo -u postgres psql
 
-stg_geostore::
+app::
 
-  CREATE USER stg_geostore LOGIN PASSWORD '------' NOSUPERUSER INHERIT NOCREATEDB NOCREATEROLE;
-
-diss_geostore::
-
-  CREATE USER diss_geostore LOGIN PASSWORD '------' NOSUPERUSER INHERIT NOCREATEDB NOCREATEROLE;
+  CREATE USER app LOGIN PASSWORD '------' NOSUPERUSER INHERIT NOCREATEDB NOCREATEROLE;
   
-stg_geoserver::
+geoserver::
 
-  CREATE USER stg_geoserver LOGIN PASSWORD '------' NOSUPERUSER INHERIT NOCREATEDB NOCREATEROLE;
-
-diss_geoserver::
-
-  CREATE USER diss_geoserver LOGIN PASSWORD '------' NOSUPERUSER INHERIT NOCREATEDB NOCREATEROLE;
+  CREATE USER geoserver LOGIN PASSWORD '------' NOSUPERUSER INHERIT NOCREATEDB NOCREATEROLE;
 
 
 Create databases
 ................
 
-stg_geostore::
+Again, the *app* user is only necessary in dissemination.
+
+app::
 
   sudo -u postgres createdb -O stg_geostore stg_geostore
 
-diss_geostore::
+geoserver::
 
-  sudo -u postgres createdb -O diss_geostore diss_geostore
-
-stg_geoserver::
-
-  sudo -u postgres createdb -O stg_geoserver -T template_postgis stg_geoserver
-  sudo -u postgres psql stg_geoserver
-    stg_geoserver=# GRANT ALL ON geometry_columns TO stg_geoserver;
-
-diss_geoserver::
-
-  sudo -u postgres createdb -O diss_geoserver -T template_postgis diss_geoserver
-  sudo -u postgres psql diss_geoserver
-    diss_geoserver=# GRANT ALL ON geometry_columns TO diss_geoserver;
+  sudo -u postgres createdb -O geoserver -T template_postgis geoserver
+  sudo -u postgres psql geoserver
+    geoserver=# GRANT ALL ON geometry_columns TO geoserver;
 
 
 Configure PostgreSQL access
